fixed bullet margins for wrapping content alignment; modified work history data'

--- a/src/components/Experience/style.scss
+++ b/src/components/Experience/style.scss
@@ -14,7 +14,8 @@
   }
 
   &__bullets {
-    margin-left: 3px;
+    margin-left: 18px;
+    list-style: outside;
   }
 
   &__technology {
