--- a/src/components/Training/style.scss
+++ b/src/components/Training/style.scss
@@ -6,6 +6,9 @@
   }
 
   &__bullets {
-    margin-left: 3px;
+    > ul {
+      margin-left: 18px;
+      list-style: outside;
+    }
   }
 }
